<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/Hw5_title"
        android:textColor="#142063"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:text="@string/Hw5_year"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/Hw5_month"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year" />

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/Hw5_day"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month" />

    <TextView
        android:id="@+id/now_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/Hw5_now_time"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <TextView
        android:id="@+id/o_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:text="@string/Hw5_clock"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/editV4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:text="@string/Hw5_minute"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/editV5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:text="@string/Hw5_second"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/editV6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ymd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="380dp"
        android:text="@string/Hw5_ymd"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hms"
        android:layout_width="80sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="380dp"
        android:text="@string/Hw5_hms"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/ymd"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/set_ymd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="420dp"
        android:textAlignment="viewStart"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#142063"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/set_hms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="420dp"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#142063"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn1"
        style="@android:style/Widget.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="300dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/Hw5_set_time"
        android:textColor="#142063"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editV1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#142063"
        app:layout_constraintStart_toEndOf="@+id/year"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editV2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#142063"
        app:layout_constraintStart_toEndOf="@+id/month"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editV3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="170dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#142063"
        app:layout_constraintStart_toEndOf="@+id/day"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editV4"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="220dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#142063"
        app:layout_constraintStart_toEndOf="@+id/now_time"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editV5"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#142063"
        app:layout_constraintStart_toEndOf="@+id/o_clock"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editV6"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#142063"
        app:layout_constraintStart_toEndOf="@+id/minute"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>